--- a/InterpretBank/InterpretBank/SettingsService/UI/GlossarySetup.xaml
+++ b/InterpretBank/InterpretBank/SettingsService/UI/GlossarySetup.xaml
@@ -10,11 +10,15 @@
         x:Name="GlossaryManager_Window"
         xmlns:interpretBank="clr-namespace:InterpretBank"
         xmlns:converters="clr-namespace:InterpretBank.SettingsService.Converters"
+        MouseDown="Window_MouseDown"
         xmlns:model="clr-namespace:InterpretBank.SettingsService.Model"
         xmlns:converters1="clr-namespace:InterpretBank.Converters"
-        xmlns:controls1="clr-namespace:InterpretBank.Controls"
+        xmlns:controls="clr-namespace:InterpretBank.Controls"
+        xmlns:multiItemSelect="clr-namespace:InterpretBank.Controls.MultiItemSelect"
         d:DataContext="{d:DesignInstance viewModel:GlossarySetupViewModel}"
-        SizeToContent="Height"
+        WindowStyle="None"
+        SizeToContent="WidthAndHeight"
+        MaxWidth="600"
         mc:Ignorable="d"
         Title="InterpretBank database configurator"
         Icon="/InterpretBank;component/Resources/IB.ico"
@@ -34,6 +38,12 @@
             <converters:NullStringToVisibilityConverter x:Key="NullToVisibilityConverter" />
             <converters:NullToBoolConverter x:Key="NullToBullConverter" />
             <converters1:BoolToVisibilityConverter x:Key="BoolToVisConverter" />
+            <Style TargetType="GroupBox">
+                <Setter Property="Margin"
+                        Value="0" />
+            </Style>
+
+
         </ResourceDictionary>
     </Window.Resources>
     <Grid>
@@ -43,29 +53,33 @@
             <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
+
+
         <Image Grid.Row="0"
                Height="50"
                Source="/InterpretBank;component/Resources/logo.png" />
+
         <DockPanel Grid.Row="1"
                    HorizontalAlignment="Stretch"
                    Margin="10 10 10 5"
                    VerticalAlignment="Top">
 
-            <TextBlock Text="{x:Static interpretBank:PluginResources.SettingsWindow_TextBlock_DBFilepath}"
-                       x:Name="FilepathLabel"
-                       DockPanel.Dock="Top" />
-
-            <controls1:ChooseFilepathControl x:Name="ChooseFilepathControl"
-                                             AutomationProperties.LabeledBy="{Binding ElementName=FilepathLabel}"
-                                             Filepath="{Binding Filepath, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" />
+            <GroupBox Header="Locate your database">
+                <controls:ChooseFilepathControl x:Name="ChooseFilepathControl"
+                                                AutomationProperties.LabeledBy="{Binding ElementName=FilepathLabel}"
+                                                Filepath="{Binding Filepath, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" />
+            </GroupBox>
 
         </DockPanel>
         <TabControl Margin="10"
+                    x:Name="TabControl"
                     Visibility="{Binding IsDbValid, Converter={StaticResource BoolToVisConverter}, ConverterParameter=True}"
                     Grid.Row="2"
+                    HorizontalAlignment="Stretch"
                     Background="#F6F6F6"
                     BorderThickness="1">
             <TabItem Header="Glossaries"
+                     TabIndex="1"
                      Template="{StaticResource GlossarySetupTabItem}">
                 <Grid>
 
@@ -136,7 +150,7 @@
                                             FontSize="8"
                                             AutomationProperties.Name="DeleteGlossary"
                                             Style="{StaticResource Sdl.Button.EmbeddedStyle}"
-                                            Content="✖"/>
+                                            Content="✖" />
                                     <Image Source="../../Resources/Glossary.png"
                                            DockPanel.Dock="Left"
                                            Height="17" />
@@ -167,14 +181,26 @@
                                    DockPanel.Dock="Top"
                                    FontWeight="Light"
                                    FontSize="10" />
-                            <sdl:MultiSelectComboBox DockPanel.Dock="Bottom"
+
+
+                            <!--<sdl:MultiSelectComboBox DockPanel.Dock="Bottom"
                                                      OpenDropDownListAlsoWhenNotInEditMode="True"
                                                      Margin="5 0 0 5"
                                                      IsEnabled="{Binding SelectedGlossary, Converter={StaticResource NullToBullConverter}}"
                                                      ItemsSource="{Binding Languages}"
                                                      SelectedItems="{Binding SelectedGlossary.Languages}"
                                                      DropdownItemTemplate="{StaticResource LanguageTemplate}"
-                                                     SelectedItemTemplate="{StaticResource LanguageTemplate}" />
+                                                     SelectedItemTemplate="{StaticResource LanguageTemplate}" />-->
+
+                            <multiItemSelect:MultiItemSelectControl DockPanel.Dock="Bottom"
+                                                                    SelectedItems="{Binding SelectedGlossary.Languages, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                                                    ItemsSource="{Binding Languages}"
+                                                                    Margin="5 0 0 5"
+                                                                    DeleteEnabled="False"
+                                                                    SelectedItemTemplate="{StaticResource LanguageTemplate}"
+                                                                    ItemTemplate="{StaticResource LanguageTemplate}"
+                                                                    IsEnabled="{Binding SelectedGlossary, Converter={StaticResource NullToBullConverter}}" />
+
                         </DockPanel>
                         <DockPanel Grid.Row="1">
                             <Label DockPanel.Dock="Top"
@@ -182,25 +208,23 @@
                                    Padding="5 0 0 5"
                                    FontWeight="Light"
                                    FontSize="10" />
-                            <sdl:MultiSelectComboBox DockPanel.Dock="Bottom"
-                                                     OpenDropDownListAlsoWhenNotInEditMode="True"
-                                                     Margin="5 0 0 0"
-                                                     IsEnabled="{Binding SelectedGlossary, Converter={StaticResource NullToBullConverter}}"
-                                                     ItemsSource="{Binding Tags}"
-                                                     SelectedItems="{Binding SelectedGlossaryTags}"
-                                                     DropdownItemTemplate="{StaticResource TagTemplate}"
-                                                     SelectedItemTemplate="{StaticResource TagTemplate}" />
+
+                            <multiItemSelect:MultiItemSelectControl DockPanel.Dock="Bottom"
+                                                                    SelectedItems="{Binding SelectedGlossaryTags}"
+                                                                    ItemsSource="{Binding Tags}"
+                                                                    Margin="5 0 0 5"
+                                                                    SelectedItemTemplate="{StaticResource TagTemplate}"
+                                                                    ItemTemplate="{StaticResource TagTemplate}"
+                                                                    IsEnabled="{Binding SelectedGlossary, Converter={StaticResource NullToBullConverter}}" />
                         </DockPanel>
                     </Grid>
-
-
                 </Grid>
 
             </TabItem>
 
             <!--Tags tab-->
             <TabItem Header="Tags"
-                     Template="{StaticResource GlossarySetupTabItem}">
+                     TabIndex="2">
                 <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto" />
@@ -247,7 +271,7 @@
                                             DockPanel.Dock="Left"
                                             FontSize="8"
                                             Style="{StaticResource Sdl.Button.EmbeddedStyle}"
-                                            Content="✖"/>
+                                            Content="✖" />
                                     <Image Source="../../Resources/Tag.png"
                                            DockPanel.Dock="Left"
                                            Height="17" />
@@ -261,7 +285,7 @@
                     </ListBox>
 
 
-                    <sdl:MultiSelectComboBox Grid.Column="1"
+                    <!--<sdl:MultiSelectComboBox Grid.Column="1"
                                              Grid.Row="1"
                                              OpenDropDownListAlsoWhenNotInEditMode="True"
                                              Margin="5 0 0 0"
@@ -269,17 +293,34 @@
                                              IsEnabled="{Binding SelectedGlossary, Converter={StaticResource NullToBullConverter}}"
                                              DropdownItemTemplate="{StaticResource GlossaryTemplate}"
                                              SelectedItems="{Binding SelectedTagGlossaries}"
-                                             SelectedItemTemplate="{StaticResource GlossaryTemplate}" />
+                                             SelectedItemTemplate="{StaticResource GlossaryTemplate}" />-->
+                    <Label DockPanel.Dock="Top"
+                           Content="Glossaries"
+                           Grid.Column="1"
+                           Grid.Row="1"
+                           Padding="5 0 0 5"
+                           FontWeight="Light"
+                           FontSize="10" />
+                    <multiItemSelect:MultiItemSelectControl Grid.Column="1"
+                                                            Grid.Row="1"
+                                                            Margin="5 0 0 0"
+                                                            ItemsSource="{Binding Glossaries}"
+                                                            IsEnabled="{Binding SelectedTag, Converter={StaticResource NullToBullConverter}}"
+                                                            ItemTemplate="{StaticResource GlossaryTemplate}"
+                                                            SelectedItems="{Binding SelectedTagGlossaries}"
+                                                            SelectedItemTemplate="{StaticResource GlossaryTemplate}" />
+
                 </Grid>
             </TabItem>
 
             <TabItem Header="DB Languages"
+                     TabIndex="3"
                      Template="{StaticResource GlossarySetupTabItem}">
 
                 <DataGrid ItemsSource="{Binding SelectedLanguages}"
-                          Grid.Row="0"
                           AutoGenerateColumns="False"
                           Style="{StaticResource Sdl.DataGrid.GenericStyle}"
+                          HorizontalAlignment="Stretch"
                           SelectionMode="Single"
                           IsReadOnly="True">
 
@@ -290,7 +331,7 @@
                                     <Grid>
                                         <Grid.ColumnDefinitions>
                                             <ColumnDefinition Width="Auto" />
-                                            <ColumnDefinition />
+                                            <ColumnDefinition Width="*" />
                                         </Grid.ColumnDefinitions>
                                         <Button Content="⟲"
                                                 FontSize="15"
@@ -320,15 +361,24 @@
                    VerticalAlignment="Bottom"
                    LastChildFill="False">
 
+            <Button Content="Help"
+                    Cursor="Hand"
+                    Height="30"
+                    Click="HelpButton_OnClick"
+                    HorizontalAlignment="Left"
+                    Style="{StaticResource Sdl.Button.GeneralStyle}"
+                    DockPanel.Dock="Left"
+                    Margin="10 0 10 10" />
 
             <Button Content="Close"
                     IsCancel="True"
                     Cursor="Hand"
                     Click="ApplyButton_Click"
                     Height="30"
-                    Style="{StaticResource Sdl.Button.PrimaryStyle}"
+                    Style="{StaticResource Sdl.Button.DialogStyle}"
                     DockPanel.Dock="Right"
                     Margin="0 0 10 10" />
+
         </DockPanel>
     </Grid>
 </Window>
