--- a/InterpretBank/InterpretBank/SettingsService/UI/SettingsMain.xaml
+++ b/InterpretBank/InterpretBank/SettingsService/UI/SettingsMain.xaml
@@ -4,11 +4,11 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:viewModel="clr-namespace:InterpretBank.SettingsService.ViewModel"
-        xmlns:styles="clr-namespace:InterpretBank.Styles"
-        xmlns:interpretBank="clr-namespace:InterpretBank"
-        xmlns:converters="clr-namespace:InterpretBank.SettingsService.Converters"
+        WindowStyle="None"
         xmlns:controls="clr-namespace:InterpretBank.Controls"
-        xmlns:converters1="clr-namespace:InterpretBank.Converters"
+        xmlns:multiItemSelect="clr-namespace:InterpretBank.Controls.MultiItemSelect"
+        xmlns:converters="clr-namespace:InterpretBank.Converters"
+        xmlns:model="clr-namespace:InterpretBank.SettingsService.Model"
         MouseDown="Window_MouseDown"
         mc:Ignorable="d"
         x:Name="Root"
@@ -17,8 +17,8 @@
         SizeToContent="Height"
         WindowStartupLocation="CenterScreen"
         Height="Auto"
-        MinWidth="300"
-        MinHeight="490"
+        MinWidth="533"
+        MinHeight="450"
         Width="600">
     <Window.Resources>
         <ResourceDictionary>
@@ -29,9 +29,16 @@
                 <ResourceDictionary Source="/InterpretBank;component/SettingsService/Styles/SettingsMainResources.xaml" />
                 <ResourceDictionary Source="/Sdl.Desktop.Platform.Controls;component/Controls/WatermarkTextBox/WatermarkTextBoxResources.xaml" />
             </ResourceDictionary.MergedDictionaries>
+            <Style TargetType="GroupBox"
+                   BasedOn="{StaticResource {x:Type GroupBox}}">
+                <Setter Property="Margin"
+                        Value="10" />
+                <Setter Property="Padding"
+                        Value="10" />
+            </Style>
 
-            <converters:NullStringToVisibilityConverter x:Key="NullToVisibilityConverter" />
-            <converters1:RatioConverter x:Key="RatioConverter" />
+            <converters:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter" />
+
         </ResourceDictionary>
     </Window.Resources>
 
@@ -46,35 +53,40 @@
 
         <Image Grid.Row="0"
                Height="50"
+               Margin="0 25 0 20"
                Source="../../Resources/logo.png" />
 
-        <!--Filepath field-->
-        <DockPanel Grid.Row="1"
+        <GroupBox Grid.Row="1"
+                  Padding="0"
+                  HorizontalAlignment="Left"
+                  Header="Locate database">
+            <DockPanel HorizontalAlignment="Stretch"
+                       VerticalAlignment="Top">
+
+                <controls:ChooseFilepathControl Filepath="{Binding Filepath, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" />
+
+            </DockPanel>
+        </GroupBox>
+
+        <GroupBox Grid.Row="2"
+                  Header="Select glossaries">
+            <controls:GlossariesOrTagsControl2 Margin="0 5" />
+        </GroupBox>
+
+        <DockPanel Grid.Row="3"
+                   LastChildFill="False"
                    HorizontalAlignment="Stretch"
-                   Margin="10 10 10 5"
-                   VerticalAlignment="Top">
+                   VerticalAlignment="Bottom">
+            <Button Content="Help"
+                    Cursor="Hand"
+                    Width="120"
+                    Height="30"
+                    Click="HelpButton_OnClick"
+                    HorizontalAlignment="Left"
+                    Style="{StaticResource Sdl.Button.GeneralStyle}"
+                    DockPanel.Dock="Left"
+                    Margin="10 0 10 10" />
 
-            <TextBlock Text="{x:Static interpretBank:PluginResources.SettingsWindow_TextBlock_DBFilepath}"
-                       DockPanel.Dock="Top" />
-
-
-
-            <controls:ChooseFilepathControl Filepath="{Binding Filepath, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" />
-
-        </DockPanel>
-
-        <controls:GlossariesOrTagsControl Grid.Row="2"
-                                          Height="Auto"
-                                          x:Name="SettingsUi"
-                                          Margin="10 10 10 5"
-                                          DataContext="{Binding DataContext, RelativeSource={RelativeSource AncestorType=Window}}"
-                                          Visibility="{Binding Filepath, Converter={StaticResource NullToVisibilityConverter}}" />
-
-        <StackPanel Grid.Row="3"
-                    Orientation="Horizontal"
-                    Margin="0 50 0 0"
-                    HorizontalAlignment="Right"
-                    VerticalAlignment="Bottom">
             <Button Content="Cancel"
                     Cursor="Hand"
                     Width="120"
@@ -87,12 +99,13 @@
             <Button Content="OK"
                     Cursor="Hand"
                     Width="120"
+                    IsDefault="True"
                     Command="{Binding SaveCommand}"
                     Click="ButtonBase_OnClick"
                     Height="30"
                     Style="{StaticResource Sdl.Button.PrimaryStyle}"
                     DockPanel.Dock="Right"
                     Margin="0 0 10 10" />
-        </StackPanel>
+        </DockPanel>
     </Grid>
 </Window>
