--- a/MicrosoftTranslatorProvider/LanguageMappingProvider/View/LanguageMappingProviderView.xaml
+++ b/MicrosoftTranslatorProvider/LanguageMappingProvider/View/LanguageMappingProviderView.xaml
@@ -1,16 +1,11 @@
-﻿<Window x:Class="MicrosoftTranslatorProvider.View.LanguageMappingProviderView"
+﻿<Window x:Class="MicrosoftTranslatorProvider.LanguageMappingProvider.View.LanguageMappingProviderView"
 		xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 		xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-		xmlns:root="clr-namespace:MicrosoftTranslatorProvider"
-		xmlns:views="clr-namespace:MicrosoftTranslatorProvider.View"
 		xmlns:controls="clr-namespace:MicrosoftTranslatorProvider.Controls"
-		xmlns:styles="clr-namespace:MicrosoftTranslatorProvider.Styles"
-		xmlns:helpers="clr-namespace:MicrosoftTranslatorProvider.Helpers"
-		xmlns:behaviours="clr-namespace:MicrosoftTranslatorProvider.Behaviours"
 		xmlns:converters="clr-namespace:MicrosoftTranslatorProvider.Converters"
-		xmlns:viewmodel="clr-namespace:MicrosoftTranslatorProvider.ViewModel"
+        xmlns:viewmodel="clr-namespace:MicrosoftTranslatorProvider.LanguageMappingProvider.ViewModel"
 		mc:Ignorable="d"
 		d:DataContext="{d:DesignInstance viewmodel:LanguageMappingProviderViewModel}"
 		BorderThickness="1"
