--- a/MicrosoftTranslatorProvider/View/MicrosoftAuthenticationView.xaml
+++ b/MicrosoftTranslatorProvider/View/MicrosoftAuthenticationView.xaml
@@ -42,8 +42,8 @@
 		<TextBlock Grid.Row="0"
 				   Grid.Column="0"
 				   Grid.ColumnSpan="2"
-				   Text="Microsoft Translator Provider"
-                   AutomationProperties.HelpText="You've chosen Microsoft Authentication. Please provide your API Key and choose your account region."
+				   Text="Microsoft Translator Provider - API Key"
+                   AutomationProperties.HelpText="Please provide your API Key and choose your account region."
 				   Style="{StaticResource Sdl.TextBlock.TitleStyle}"
 				   HorizontalAlignment="Center"
 				   TextWrapping="Wrap"
@@ -55,12 +55,13 @@
 		<TextBlock Grid.Row="1"
 				   Grid.Column="0"
 				   Grid.ColumnSpan="2"
-				   Text="You've chosen Microsoft Authentication. Please provide your API Key and choose your account region."
+				   Text="Please provide your API Key and choose your account region."
 				   Style="{StaticResource Sdl.TextBlock.InformationTextStyle}"
 				   HorizontalAlignment="Center"
 				   TextWrapping="Wrap"
 				   MaxWidth="999"
 				   FontSize="12"
+                   Focusable="False"
 				   Margin="0 4" />
 
 		<PasswordBox Grid.Row="3"
