--- a/Qualitivity/Sdl.Community.Qualitivity/WarningWindow/SettingsActionWarning.xaml
+++ b/Qualitivity/Sdl.Community.Qualitivity/WarningWindow/SettingsActionWarning.xaml
@@ -1,16 +1,16 @@
-﻿<Window x:Class="Trados.Transcreate.TellMe.WarningWindow.SettingsActionWarning"
+﻿<Window x:Class="Sdl.Community.Qualitivity.WarningWindow.SettingsActionWarning"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:root="clr-namespace:Trados.Transcreate"
+		xmlns:root="clr-namespace:Sdl.Community.Qualitivity"
         mc:Ignorable="d"
         Title="TellMe Warning"
         ResizeMode="NoResize"
         Loaded="SettingsActionWarning_OnLoaded"
         SizeToContent="WidthAndHeight"
         WindowStyle="None"
-        Name="Root"
+        x:Name="Root"
         MinWidth="350"
         WindowStartupLocation="Manual"
         MouseLeftButtonDown="Window_MouseLeftButtonDown"
@@ -36,12 +36,12 @@
 
             <StackPanel Orientation="Horizontal"
                         Margin="15 20">
-                <Image Source="/Trados.Transcreate;component/Resources/information.png"
+				<Image Source="/Qualitivity;component/Resources/information.png"
                        Height="40"
                        Width="40"
                        RenderOptions.BitmapScalingMode="HighQuality" />
 
-                <TextBlock Text="{x:Static root:PluginResources.SettingsAction_Title}"
+                <TextBlock Text="{Binding ActionTitle, ElementName=Root}"
                            Style="{StaticResource Sdl.TextBlock.InformationTitleStyle}"
                            FontSize="16"
                            Margin="5 0 0 0"
