--- a/InterpretBank/InterpretBank/SettingsService/UI/CreateGlossaryWindow.xaml
+++ b/InterpretBank/InterpretBank/SettingsService/UI/CreateGlossaryWindow.xaml
@@ -40,18 +40,16 @@
                     HorizontalAlignment="Right"
                     Orientation="Horizontal">
             <Button Content="OK"
-                    Style="{StaticResource Sdl.Button.GeneralStyle}"
-                    Height="10"
+                    Style="{StaticResource Sdl.Button.PrimaryStyle}"
                     Command="Close"
                     Click="ButtonBase_OnClick"
                     IsDefault="True"
                     HorizontalAlignment="Left"
                     Margin="0 0 5 5" />
             <Button Content="Cancel"
-                    Style="{StaticResource Sdl.Button.GeneralStyle}"
+                    Style="{StaticResource Sdl.Button.SecondaryStyle}"
                     HorizontalAlignment="Right"
                     Command="Close"
-                    Height="10"
                     IsCancel="True"
                     Margin="0 0 5 5"/>
 
